[package]
name = "task_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
headers = "0.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cookie = "0.18"
axum-extra = { version = "0.9", features = ["cookie"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
dotenv = "0.15"
[dev-dependencies]
sqlx-cli = "0.7" 
